[package]
name = "dynamic_binomial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dynamic_binomial"
path = "src/lib.rs"

[dev-dependencies]
rand={version="0.8.5"}
criterion = {version="0.3",features=["html_reports"]}

[[bench]]
name = "bin_coeff_bench"